rendered/envs/alpha/iperf/deployment-iperf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: iperf
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: iperf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: iperf
    spec:
      containers:
        - args:
            - -s
          image: clearlinux/iperf
          name: iperf
          ports:
            - containerPort: 5201
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
            privileged: false
