rendered/envs/alpha/iperf/ingress-iperf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    a8r.io/repository: git@github.com:Zebradil/myks-homelab.git
  name: iperf
spec:
  rules:
    - host: iperf.junior.zebradil.dev
      http:
        paths:
          - backend:
              service:
                name: iperf
                port:
                  name: http
            path: /
            pathType: Prefix
